# flet_sherpa_onnx

.github/workflows/: pip.yml  release.yml
examples/flet_sherpa_onnx_example/: pyproject.toml
src/flutter/flet_sherpa_onnx/: pubspec.yaml
