[project]
name = "flet-sherpa-onnx-example"
version = "1.0.0"
description = "flet sherpa onnx example"
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
  "flet-sherpa-onnx @ git+https://github.com/ndonkoHenri/flet_sherpa_onnx.git",
  "flet",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"
permissions = ["microphone"]

[tool.flet.app]
path = "src"

[tool.flet.macos]
entitlement."com.apple.security.files.user-selected.read-write" = true
entitlement."com.apple.security.device.audio-input" = true